# Task-Management-API

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/code-quality-reviewer/: SKILL.md
.claude/skills/fastapi-endpoint-generator/: SKILL.md
.claude/skills/project-structure-initializer/: SKILL.md
.claude/skills/sqlmodel-designer/: SKILL.md
.claude/skills/tdd-api-builder/: SKILL.md
app/: database.py  main.py
app/models/: __init__.py  task.py
app/routers/: tasks.py
tests/: conftest.py  test_tasks.py
